[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sre-triage-env"
version = "1.0.0"
description = "Cloud SRE Triage RL environment for the Meta OpenEnv Hackathon"
requires-python = ">=3.10"
dependencies = [
    "openenv-core>=0.2.0",
    "openai>=1.0.0",
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.20.0",
    "pydantic>=2.0.0",
    "requests>=2.28.0",
]

# REQUIRED: must reference main() function (not the FastAPI app instance)
[project.scripts]
server = "server.app:main"
